force-app/main/default/objects/Complaint_Approval_Request__c/Complaint_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Complaint Approval Request</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Complaint Approval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>