force-app/main/default/objects/Complaint_Approval_Request__c/fields/Amount_To_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Refund__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Amount To Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>