force-app/main/default/objects/Complaint_Approval_Request__c/fields/Is_External__c.field-meta.xml
<CustomField>
    <fullName>Is_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External</label>
    <type>Checkbox</type>
</CustomField>