force-app/main/default/objects/Complaint_Approval_Request__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Complaint Approval Requests</relationshipLabel>
    <relationshipName>Complaint_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>